domain/id_macros/tests/ui/generics-not-supported.stderr
error: #[id] does not support generics
 --> tests/ui/generics-not-supported.rs:4:21
  |
4 | pub struct GenericId<T>;
  |                     ^^^
