domain/id_macros/tests/ui/generics-not-supported.rs
use id_macros::id;

#[id]
pub struct GenericId<T>;

fn main() {}
